--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.17.0",
-    "npm": "6.14.5"
+    "node": "8.1.1",
+    "npm": "5.0.3"
   },
   "scripts": {
     "start": "node index.js",
-    "server": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run client"
   },
   "author": "",
   "license": "ISC",
